# iths-data-engineering

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  create_student_repo.bash  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: run_ci_cd.yml  test.yml
dags/: test.py  tutorial.py
src/newsfeed/: dag_start.py  datatypes.py  download_blogs_from_rss.py  extract_articles.py  log_utils.py  send_to_discord.py  summarize.py
src/newsfeed/data_warehouse/: database_utils.py  save_articles.py  summarize.py
